# TikalMeetup2024

./: .env  .gitignore  README.md  meetup.ipynb  pyproject.toml
